checker/tests/parsing/errors/struct_rest_not_last.mft
type T {
  f: Base { .., a };
}
=== error ===
Unrecognized token `,` found at 23:24
Expected one of "}"